unpackaged/objects/OpCo_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OpCo Accounts Data</relationshipLabel>
        <relationshipName>OpCo_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>OpCo Record Deleted Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Parent_Id__c</fullName>
        <formula>Account__r.Global_Parent_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Distributor_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Distributor/ Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Manager__c</fullName>
        <label>Key Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Name__c</fullName>
        <label>Local Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Parenting__c</fullName>
        <label>Manual Parenting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Matched with LSIG</fullName>
                </value>
                <value>
                    <fullName>LSIG missing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCoLastModifiedDate__c</fullName>
        <label>OpCo Last Modified Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo_Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpCo Related Contact</label>
        <referenceTo>OpCo_Related_Contact__c</referenceTo>
        <relationshipLabel>OpCo Accounts Data</relationshipLabel>
        <relationshipName>OpCo_Accounts_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Account Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_Re_parenting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this if you dont want Salesforce to auro-find &amp; select DUNS Parent for this OpCo Account.</inlineHelpText>
        <label>Skip Re-parenting?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Link__c</fullName>
        <formula>IF( (ISPICKVAL( Source__c , &quot;Leica&quot;)) , $Setup.BaseURL__c.Leica__c+Source_OpCo_Record_Id__c,
IF( (ISPICKVAL( Source__c , &quot;IDBS&quot;)) , $Setup.BaseURL__c.IDBS__c+Source_OpCo_Record_Id__c,
IF((ISPICKVAL( Source__c , &quot;Moldev&quot;)) , $Setup.BaseURL__c.Moldev__c+Source_OpCo_Record_Id__c,
IF((ISPICKVAL( Source__c , &quot;SCIEX&quot;)) , $Setup.BaseURL__c.SCIEX__c+Source_OpCo_Record_Id__c,
IF((ISPICKVAL( Source__c , &quot;Beckman&quot;)) , $Setup.BaseURL__c.Beckman__c+Source_OpCo_Record_Id__c,
NULL )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_OpCo_Owner_Email__c</fullName>
        <label>Source OpCo Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Source_OpCo_Owner_Id__c</fullName>
        <label>Source OpCo Owner Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_OpCo_Owner__c</fullName>
        <label>Source OpCo Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_OpCo_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source OpCo Record Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source OpCo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beckman</fullName>
                </value>
                <value>
                    <fullName>IDBS</fullName>
                </value>
                <value>
                    <fullName>Leica</fullName>
                </value>
                <value>
                    <fullName>Moldev</fullName>
                </value>
                <value>
                    <fullName>SCIEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_OpCo_Contacts__c</fullName>
        <label>Total OpCo Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opportunities__c</fullName>
        <label>Total Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <label>Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>OpCo Account Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>Billing_Country__c</columns>
        <columns>Billing_Zip__c</columns>
        <columns>DUNS_Number__c</columns>
        <columns>Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>BECKMAN_All_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>Billing_Country__c</columns>
        <columns>Billing_Zip__c</columns>
        <columns>DUNS_Number__c</columns>
        <columns>Source_OpCo_Owner__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Beckman</value>
        </filters>
        <label>Beckman All Accounts</label>
    </listViews>
    <listViews>
        <fullName>IDBS_All_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>Billing_Country__c</columns>
        <columns>Billing_Zip__c</columns>
        <columns>DUNS_Number__c</columns>
        <columns>Source_OpCo_Owner__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>IDBS</value>
        </filters>
        <label>IDBS All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Leica_All_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>Billing_Country__c</columns>
        <columns>Billing_Zip__c</columns>
        <columns>DUNS_Number__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Leica</value>
        </filters>
        <label>Leica All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Moldev_All_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>Billing_Country__c</columns>
        <columns>Billing_Zip__c</columns>
        <columns>DUNS_Number__c</columns>
        <columns>Source_OpCo_Owner__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Moldev</value>
        </filters>
        <label>MolDev All Accounts</label>
    </listViews>
    <listViews>
        <fullName>SCIEX_All_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Source__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>Billing_Country__c</columns>
        <columns>Billing_Zip__c</columns>
        <columns>DUNS_Number__c</columns>
        <columns>Source_OpCo_Owner__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>SCIEX</value>
        </filters>
        <label>SCIEX All Accounts</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000000}</displayFormat>
        <label>OpCo Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpCo Accounts Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>